# trimy

./: .gitignore  Cargo.toml  README.md  package.json  turbo.json
apps/editor/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/editor/src/: app-shell.tsx  main.tsx  router.tsx  trimy.css
apps/editor/src/env/: web.ts
apps/editor/src/shims/: content-collections.ts  next-image.tsx  next-link.tsx  next-navigation.tsx
apps/tauri/: README.md  package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs
apps/tauri/src-tauri/src/commands/: mod.rs  proxy.rs  secrets.rs
apps/web/: .env.example
apps/web/src/agent-bridge/: audio-intel.ts  frame-capture.ts  index.ts  tools.ts  use-agent-bridge.ts
apps/web/src/app/: globals.css
apps/web/src/core/managers/: project-manager.ts
apps/web/src/editor/: panel-store.ts
apps/web/src/export/: index.ts
apps/web/src/media/: use-file-upload.ts
apps/web/src/panels/: layout.ts
apps/web/src/transcription/: models.ts  types.ts
apps/web/src/utils/: desktop-files.ts  tauri-transport.ts
docs/: BYOK.md  PHASE0.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  blueprint.md
script/: setup-rust  setup-rust.ps1
scripts/: build-wasm.mjs  capture-ui-screenshot.mjs  e2e-agent-chat.mjs  e2e-agent-confirm.mjs  e2e-agent-panel.mjs  e2e-agent-podcast-rough-cut.mjs  e2e-import-export.mjs  e2e-new-project.mjs  generate-phase3-fixtures.mjs  spike-groq-transcribe.sh
(+8 files in other folders)
