[package]
name = "trimy-desktop"
version = "0.1.0"
description = "Trimy — AI-assisted video editor for Windows"
authors = ["Faiz Intifada <hello@faizintifada.com>"]
license = "MIT"
repository = "https://github.com/julianromli/trimy"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = "3"
tauri = { version = "2.11.3" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
